Fix alignment

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -27,7 +27,7 @@
 
     li {
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: left;
       display: grid;
       grid-template-columns: 24px 100px auto;
       gap: 20px;
